--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 
     <div class="hero-v1">
         <div class="container">
@@ -197,4 +197,4 @@
       </div>
   
   
-  
+  <app-footer></app-footer>
