--- a/src/app/prevention/prevention.component.html
+++ b/src/app/prevention/prevention.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
     <div class="hero-v1">
         <div class="container">
           <div class="row align-items-center">
@@ -239,4 +239,4 @@
           </div>
         </div>
       </div>
-  
+  <app-footer></app-footer>
