--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
             <div class="row align-items-center">
             <div class="col-lg-6 mr-auto text-center text-lg-left">
                 <span class="d-block subheading">Covid-19 Awareness</span>
-                <h1 class="heading mb-3">saba Stay Safe. Stay Home.</h1>
+                <h1 class="heading mb-3">The Kinf=g Mlk Stay Safe. Stay Home.</h1>
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel a, nulla incidunt eaque sit praesentium porro consectetur optio!</p>
                 <p class="mb-4"><a  class="btn btn-primary"(click)="goTo()" >How to prevent</a></p>
     
