--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -4,13 +4,13 @@
         <h3>Forms</h3>
         <div class="links">
           <ul>
-            <li><a  routerLink="/admin/user">Manage User</a></li>
-            <li><a href="form-2.html">Tables</a></li>
-            <li><a class="active" href="form-2.html">Form</a></li>
-            <li><a href="form-2.html">buttons</a></li>
+            <li><a routerLink="/admin/user">Manage User</a></li>
+            <li><a routerLink="/admin/testmonial">Testmonial</a></li>
+            <li><a routerLink="/admin/vaccinaiationcenter">Vaccinaiation Center</a></li>
           </ul>
         </div>
       </div>
+      <!--
       <div class="content-area">
         <div class="content">
           <form action="">
@@ -86,6 +86,7 @@
             <input class="submit" type="submit" value="submit">
           </form>
         </div>
-      </div>
+      </div>-->
     </div>
+    
   </body>
