--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
         <div class="links">
           <ul>
             <li><a  routerLink="/admin/user">Manage User</a></li>
-            <li><a href="form-2.html">Tables</a></li>
+            <li><a routerLink="/admin/vaccine">manage vaccines</a></li>
             <li><a class="active" href="form-2.html">Form</a></li>
             <li><a href="form-2.html">buttons</a></li>
           </ul>
