--- a/src/app/admin/managevaccines/managevaccines.component.html
+++ b/src/app/admin/managevaccines/managevaccines.component.html
@@ -4,6 +4,8 @@
         <th>vaccine Name</th>
         <th>vaccine doses</th>
         <th>vaccine date exp</th>
+        <th>vaccine date exp</th>
+
     </tr>
     <tr *ngFor="let obj of vaccines.Vaccine">
         <td>{{obj.vaccineid}}</td>
