--- a/src/app/admin/managevaccines/managevaccines.component.html
+++ b/src/app/admin/managevaccines/managevaccines.component.html
@@ -1,3 +1,7 @@
+<app-sidebar></app-sidebar>
+
+
+<!-- <app-sidebar></app-sidebar>
 <table>
     <tr>
         <th>vaccine Number</th>
@@ -15,4 +19,25 @@
     
     </tr>
   
-</table>
+</table> -->
+<!-- Contenedor -->
+<div *ngFor="let obj of vaccines.Vaccine" class="pricing-wrapper clearfix">
+    <!-- Titulo -->
+
+    <div  class="pricing-table">
+        <h3 class="pricing-title">{{obj.vaccinename}}</h3>
+        <!-- Lista de Caracteristicas / Propiedades -->
+        <ul class="table-list">
+            <li>10 GB <span>De almacenamiento</span></li>
+            <li>vaccine doses <span>{{obj.vaccinedoses}}</span></li>
+            <li>vaccineexp<span>{{obj.vaccineexp}}</span></li>
+            <li>vaccineid <span>{{obj.vaccineid}}</span></li>
+            
+        </ul>
+        <!-- Contratar / Comprar -->
+        <div class="table-buy">
+            <a href="#" class="pricing-action">EDIT</a>
+            <a href="#" class="pricing-action">DELTE</a>
+
+        </div>
+    </div>
