--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -1,14 +1,11 @@
 * {
-  box-sizing: border-box;
   margin: 0;
 }
 body {
   font-family: tahoma, arial;
-  height: 100vh;
+  height: 100px;
 }
-.page {
-  display: flex;
-}
+
 .page .sidebar {
   width: 260px;
   background-color: #333;
