--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<body>
-    <div class="page">
+<body style="display:inline-block ;">
+    <div  class="page">
       <div class="sidebar">
         <h3>Forms</h3>
         <div class="links">
