--- a/src/app/admin/manage-user/manage-user.component.html
+++ b/src/app/admin/manage-user/manage-user.component.html
@@ -1,4 +1,6 @@
-<body>
+
+<!-- <link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
 <nav class="pcoded-navbar">
     <div class="navbar-wrapper">
         <div class="navbar-brand header-logo">
@@ -25,9 +27,7 @@
                 <li class="nav-item">
                     <a href="/Hallcategories/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-server"></i></span><span class="pcoded-mtext">Categories</span></a>
                 </li>
-                <li class="nav-item">
-                    <a href="/Halls/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-shopping-cart"></i></span><span class="pcoded-mtext">Halls</span></a>
-                </li>
+                
 
                 <li class="nav-item">
                     <a href="/Contactus/Index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-mail"></i></span><span class="pcoded-mtext"> Contact Us Messages</span></a>
@@ -53,10 +53,10 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 <!-- [ navigation menu ] end -->
 <!-- [ Header ] start -->
-<header class="navbar pcoded-header navbar-expand-lg navbar-light">
+<!-- <header class="navbar pcoded-header navbar-expand-lg navbar-light">
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse1" href="javascript:"><span></span></a>
         <a href="/Dashboard/Dashboard" class="b-brand">
@@ -66,24 +66,61 @@
             <span class="b-title">Hall Book</span>
         </a>
     </div>
-    <a class="mobile-menu" id="mobile-header" href="javascript:">
-        <i class="feather icon-more-horizontal"></i>
-    </a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            <li><a href="javascript:" class="full-screen" onclick="javascript:toggleFullScreen()"><i class="feather icon-maximize"></i></a></li>
-           
-        </ul>
-        
-    </div>
-
-
     
-</header>
-
-<link href="https://cdn.datatables.net/1.11.1/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" />
+   
+</header> -->
 
 
 
-</body>
+                
+<button (click)="opendialog()">Create New</button>
+<table  class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col"> Name</th>
+        <th scope="col">user Name</th>
+        <th scope="col">Phone Number</th>
+        <th scope="col">Num Vaccines</th>
+       
+        <th scope="col">Email</th>
+        <th scope="col">Password</th>
+        <th scope="col">Age</th>
+        <th scope="col">Role ID</th>
+        <th scope="col">Image</th>
+
+
+
+      </tr>
+    </thead>
+    <tbody *ngFor="let obj of user.User">
+      <tr>
+        <th scope="row"></th>
+        
+        <td>{{obj.fullname}}</td>
+        <td>{{obj.username}}</td>
+        <td>{{obj.phonenumber}}</td>
+        <td>{{obj.numberofvaccines}}</td>
+       
+
+        <td>{{obj.email}}</td>
+        <td>{{obj.password}}</td>
+        <td>{{obj.age}}</td>
+        <td>{{obj.roleid}}</td>
+        <td><img src="../../../assets/images/{{obj.image}}" width="100" height="100">
+        </td>
+        
+        <td>
+        <button >Update</button>
+         <button >Delete</button> 
+
+        </td>
+
+
+      </tr>
+      
+    </tbody>
+  </table>
+
+            
+
