--- a/src/app/admin/vaccine/managevaccines/managevaccines.component.css
+++ b/src/app/admin/vaccine/managevaccines/managevaccines.component.css
@@ -18,18 +18,19 @@ body {
 .wrapper {
   margin: 0 auto;
   padding: 40px;
-  max-width: 800px;
+  max-width: 100px;
 }
 
 .table {
-  margin: 0 0 40px 0;
-  width: 100%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  display: table;
+  display: inline-block;
+  margin: auto;
+  width:fit-content;
+  padding: 100px;
+  margin-left: auto;
 }
 @media screen and (max-width: 580px) {
   .table {
-    display: block;
+    display: inline;
   }
 }
 
