--- a/src/app/admin/vaccine/createvaccine/createvaccine.component.html
+++ b/src/app/admin/vaccine/createvaccine/createvaccine.component.html
@@ -1,43 +1,34 @@
-<!-- <h2 mat-dialog-title>Add Course</h2>
+<h2 mat-dialog-title>Add vaccine</h2>
 <mat-dialog-content class="mat-typography">
    <form class="example-form" [formGroup]="createForm" >
     <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Course Name</mat-label>
-      <input type="text" matInput formControlName="course_Name">
-      <mat-error *ngIf="createForm.controls['course_Name'].hasError('required')">
-        course_Name is <strong>required</strong>
+      <mat-label>vaccine Name</mat-label>
+      <input type="text" matInput formControlName="vaccines_name">
+      <mat-error *ngIf="createForm.controls['vaccines_name'].hasError('required')">
+        vaccines_name is <strong>required</strong>
       </mat-error>
-    </mat-form-field>
-    <br>
- 
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Course Price</mat-label>
-        <input type="number" matInput formControlName="price">
-        <mat-error *ngIf="createForm.controls['price'].hasError('required')">
-            price is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
+    </mat-form-field> 
+
 <br>
+<mat-form-field class="example-full-width" appearance="fill">
+  <mat-label>vaccine Doses</mat-label>
+  <input type="text" matInput formControlName="vaccine_doses">
+  <mat-error *ngIf="createForm.controls['vaccine_doses'].hasError('required')">
+    vaccine_doses is <strong>required</strong>
+  </mat-error>
+</mat-form-field>
+      <br>
       <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Start Date</mat-label>
-        <input type="date" matInput formControlName="start_Date">
-        <mat-error *ngIf="createForm.controls['start_Date'].hasError('required')">
-            start_Date <strong>required</strong>
+        <mat-label>vaccine EXP</mat-label>
+        <input type="text" matInput formControlName="vaccine_sexp">
+        <mat-error *ngIf="createForm.controls['vaccine_sexp'].hasError('required')">
+          vaccine_sexp is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <br>
-      <mat-form-field class="example-full-width" appearance="fill">
-        <mat-label>Start Date</mat-label>
-        <input type="date" matInput formControlName="end_Date">
-        <mat-error *ngIf="createForm.controls['end_Date'].hasError('required')">
-            end_Date <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-      <br>
-      <input type="file" #file formControlName="image" (change)="uploadFile(file.files)">
     </form>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
+<mat-dialog-actions >
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="saveData()">Save</button>
-</mat-dialog-actions> -->
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial  (click)="saveData()">Save</button>
+</mat-dialog-actions>
