--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
-<app-header></app-header>
-<!-- MAIN -->
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
+<!-- MAIN -->
+<body >
+    <app-header></app-header>
     <div class="hero-v1">
+
         <div class="container">
             <div class="row align-items-center">
             <div class="col-lg-6 mr-auto text-center text-lg-left">
@@ -63,7 +64,7 @@
         </div>
         </div>
     
-    
+    <!--
         <div class="site-section">
         <div class="container">
             <div class="row">
@@ -141,7 +142,8 @@
         </div>
         </div>
     
-    
+    -->
+    <!--
         <div class="site-section bg-primary-light">
         <div class="container">
             <div class="row align-items-center">
@@ -193,6 +195,7 @@
                 
                 </div>
             </div>
+            
             <div class="col-lg-5 ml-auto">
                 <h2 class="section-heading mb-4">How to Prevent Coronavirus?</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis doloribus consequatur fugit voluptatum ex rerum perspiciatis cupiditate, esse hic!</p>
@@ -209,7 +212,7 @@
             </div>
         </div>
         </div>
-    
+    <!--
         <div class="site-section">
         <div class="container">
             <div class="row mb-5">
@@ -252,8 +255,8 @@
             </div>
         </div>
         </div>
-    
-    
+    -->
+    <!--
         <div class="site-section bg-primary-light">
         <div class="container">
             <div class="row mb-5">
@@ -323,7 +326,7 @@
             </div>
         </div>
         </div>
-    
+    -->
     
         <div class="site-section">
         <div class="container">
@@ -395,5 +398,5 @@
             </div>
         </div>
         </div>
-    </body>
     <app-footer></app-footer>
+    </body>
