--- a/src/app/admin/testmonial/testmonial.component.html
+++ b/src/app/admin/testmonial/testmonial.component.html
@@ -7,7 +7,7 @@
     <button type="submit" (click)="search()" class="btn btn-success">Search</button>
    </form>-->
    <div>
- <button (click)="openCreateDialog()">Create New</button>
+ <button style="margin-top: 7%;" (click)="openCreateDialog()">Create New</button>
   <table class="table" style="width: 50%;">
      
       <thead>
