--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -8,6 +8,7 @@
             <li><a routerLink="/admin/vaccine">manage vaccines</a></li>
             <li><a routerLink="/admin/testmonial">Testmonial</a></li>
             <li><a routerLink="/admin/vaccinaiationcenter">Vaccinaiation Center</a></li>
+            <li><a routerLink="/admin/manageHome">Manage Home</a></li>
           </ul>
         </div>
       </div>
